xidlc/tests/invalid/http_security_api_key_missing_name.idl
#progma xidlc package xidlc
#progma xidlc version v1.0.0

interface InvalidApiKeySecurityService {
    @api_key(in = "header")
    @get(path = "/reports")
    string list_reports();
};
